# django_analytics_simple

./: .gitignore  LICENSE  README.md  README.rst  README_es.md  README_es.rst  pyproject.toml  setup.py
django_analytics/: apps.py  middleware.py
django_analytics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_analytics/migrations/: 0001_initial.py
django_analytics_simple/: admin.py  apps.py  middleware.py  models.py
